configs: Use sdFAT fs driver for vfat

--- a/arch/arm64/configs/enchilada_defconfig
+++ b/arch/arm64/configs/enchilada_defconfig
@@ -631,6 +631,8 @@ CONFIG_OVERLAY_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_PROC_CMDLINE_APPEND_ANDROID_FORCE_NORMAL_BOOT=y
+# CONFIG_VFAT_FS is not set
+CONFIG_SDFAT_USE_FOR_VFAT=y
 CONFIG_EXFAT_FS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_ECRYPT_FS=y
