--- a/.github/workflows/build_oos11.yml
+++ b/.github/workflows/build_oos11.yml
@@ -3,7 +3,7 @@ name: Build OxygenOS' Kernel
 on:
   workflow_dispatch:
   push:
-    branches:["oos/11.0"]
+    branches: ["oos/11.0"]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,11 +16,17 @@ jobs:
           sudo apt update -y
           sudo apt-get install git ccache wget automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python2 python3
           sudo apt clean
-          git clone https://github.com/Grill-Laux/kernel_oneplus_sdm845 -b oos/11.0 android-kernel --recursive --depth=1
           git clone https://github.com/Grill-Laux/proton-clang.git --depth=1 ~/toolchains/clang
           git clone https://github.com/Grill-Laux/android_prebuilts_misc_linux-x86_dtc_dtc ~/toolchains/dtc
           chmod +x ~/toolchains/dtc/dtc
           DTC_EXT=~/toolchains/dtc/dtc
+          
+      - name: Checkout kernel (OxygenOS)
+        uses: actions/checkout@v3
+        with:
+          repository: Grill-Laux/kernel_oneplus_sdm845
+          ref: oos/11.0
+          
       - name: Clone GCC
         run: |
           git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9 -b android-10.0.0_r47 --depth=1 --single-branch --no-tags ~/toolchains/aarch64-linux-android-4.9
@@ -28,7 +34,6 @@ jobs:
 
       - name: Compile Kernel
         run: |
-          cd $GITHUB_WORKSPACE/android-kernel
           chmod +x build_kernel_github_action.sh
           ./build_kernel_github_action.sh
           
