--- a/.github/workflows/build_pixelos.yml
+++ b/.github/workflows/build_pixelos.yml
@@ -63,10 +63,11 @@ jobs:
           EOF
           cp ../out/arch/arm64/boot/Image.gz-dtb .
           zip -r boot.zip * -x .git README.md *placeholder
-          cd ..
+          cp boot.zip ../
+          cd .. && ls
     
       - name: Upload AnyKernel
         uses: actions/upload-artifact@v4
         with:
           name: AnyKernel_PixelOS_${{ env.BUILD_TIME }}_OnePlus-6X.zip
-          path: AnyKernel3-Master/*.zip
+          path: ./*.zip
