--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -1,7 +1,8 @@
 name: Release
 on:
   workflow_dispatch:
-
+permissions:
+      contents: write
 jobs:
   build-pixelos:
     uses: ./.github/workflows/build_pixelos.yml
