--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -26,6 +26,7 @@ jobs:
       - name: release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: KernelTarget(${{ env.BUILD_TIME }})
           name: Kernel target release(${{ env.BUILD_TIME }})
           files: |
             AnyKernel3-*.zip
