--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -28,6 +28,5 @@ jobs:
         with:
           tag_name: KernelTarget(${{ env.BUILD_TIME }})
           name: Kernel target release(${{ env.BUILD_TIME }})
-          files: |
-            ./*.zip
+          files: ./*
         
