--- a/.github/workflows/build_pixelos.yml
+++ b/.github/workflows/build_pixelos.yml
@@ -3,7 +3,7 @@ on:
   workflow_call:
   workflow_dispatch:
   push:
-    branches: ["pixelos/fourteen-qpr2"]
+    branches: ["pixelos/fourteen"]
 jobs: 
   build-pixelos:
     runs-on: ubuntu-latest
@@ -48,27 +48,11 @@ jobs:
           echo 123 > out/arch/arm64/boot/Image.gz
           echo 123 > out/arch/arm64/boot/Image.gz-dtb
           curl -Lo AnyKernel3.zip https://github.com/Grill-Laux/AnyKernel3/archive/refs/heads/master.zip
-          unzip AnyKernel3.zip && rm -rf AnyKernel3.zip
-          cd AnyKernel3-master
-          cat > anykernel.sh <<EOF
-          properties() { '
-          do.devicecheck=0
-          do.cleanup=1
-          device.name1=enchilada
-          '; }
-          block=auto
-          is_slot_device=auto
-          . tools/ak3-core.sh
-          split_boot
-          flash_boot
-          EOF
-          cp ../out/arch/arm64/boot/Image.gz-dtb .
-          zip -r boot.zip * -x .git README.md *placeholder
-          cp boot.zip ../
-          cd .. && ls
+          unzip AnyKernel3.zip
+          cp ../out/arch/arm64/boot/Image.gz-dtb AnyKernel3-master
     
       - name: Upload AnyKernel
         uses: actions/upload-artifact@v4
         with:
           name: AnyKernel_PixelOS_${{ env.BUILD_TIME }}_OnePlus-6X
-          path: ./*.zip
+          path: AnyKernel3-master/*
