--- a/.github/workflows/build_los.yml
+++ b/.github/workflows/build_los.yml
@@ -47,32 +47,11 @@ jobs:
           
       - name: Make AnyKernel
         run: |
-          mkdir -p out/arch/arm64/boot/
-          echo 123 > out/arch/arm64/boot/Image
-          echo 123 > out/arch/arm64/boot/Image.gz
-          echo 123 > out/arch/arm64/boot/Image.gz-dtb
-          curl -Lo AnyKernel3.zip https://github.com/Grill-Laux/AnyKernel3/archive/refs/heads/master.zip
-          unzip AnyKernel3.zip && rm -rf AnyKernel3.zip
-          cd AnyKernel3-master
-          cat > anykernel.sh <<EOF
-          properties() { '
-          do.devicecheck=0
-          do.cleanup=1
-          device.name1=enchilada
-          '; }
-          block=auto
-          is_slot_device=auto
-          . tools/ak3-core.sh
-          split_boot
-          flash_boot
-          EOF
-          cp ../out/arch/arm64/boot/Image.gz-dtb .
-          zip -r boot.zip * -x .git README.md *placeholder
-          cp boot.zip ../
-          cd .. && ls
+          git clone https://github.com/Grill-Laux/AnyKernel3 anykernel
+          cp out/arch/arm64/boot/Image.gz-dtb anykernel
     
       - name: Upload AnyKernel
         uses: actions/upload-artifact@v4
         with:
           name: AnyKernel_LineageOS_${{ env.BUILD_TIME }}_OnePlus-6X
-          path: ./*.zip
+          path: anykernel/*
