--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -19,7 +19,12 @@ jobs:
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
-      
+
+      - name: Copy zip to tmp folder
+        run: |
+          mkdir -p tmp
+          cp *.zip tmp/
+        
       - name: Set up date
         run: echo "BUILD_TIME=$(TZ=Asia/Shanghai date "+%Y%m%d%H%M")" >> $GITHUB_ENV && ls
 
@@ -28,5 +33,5 @@ jobs:
         with:
           tag_name: KernelTarget(${{ env.BUILD_TIME }})
           name: Kernel target release(${{ env.BUILD_TIME }})
-          files: AnyKernel3_*.zip
+          files: tmp/*
         
