Workflows: OOS: wip
Signed-off-by: gluwu <137363994+Grill-Laux@users.noreply.github.com>

--- a/.github/workflows/build_oos11.yml
+++ b/.github/workflows/build_oos11.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
   workflow_dispatch:
   push:
-    branches: ["oos/11.0"]
+    branches: ["oos/wip"]
 jobs:
   build-oos:
     runs-on: ubuntu-latest
