--- a/.github/workflows/build_oos11.yml
+++ b/.github/workflows/build_oos11.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: Grill-Laux/kernel_oneplus_sdm845
-          ref: oos/11.0
+          ref: oos/wip
 
       - name: Update KernelSU
         run: |
