--- a/arch/arm64/configs/sdm845-perf_defconfig
+++ b/arch/arm64/configs/sdm845-perf_defconfig
@@ -730,3 +730,5 @@ CONFIG_TPD=y
 CONFIG_CPUFREQ_BOUNCING=y
 CONFIG_OPLUS_FEATURE_SUGOV_TL=y
 CONFIG_OPLUS_FEATURE_FUSE_FS_SHORTCIRCUIT=y
+# dt overlay
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
