Treewide: Import KernelSU [1/4]
TAG: v0.9.4

This commit does these changes:
 - Import KernelSU
 - Enable KernelSU in defconfig

For the future update, I, or github action, will force update the ksu.

Signed-off-by: uwu-gl <moegluwu0@gmail.com>

--- a/arch/arm64/configs/sdm845-perf_defconfig
+++ b/arch/arm64/configs/sdm845-perf_defconfig
@@ -732,3 +732,5 @@ CONFIG_OPLUS_FEATURE_SUGOV_TL=y
 CONFIG_OPLUS_FEATURE_FUSE_FS_SHORTCIRCUIT=y
 # dt overlay
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
+# KernelSU
+CONFIG_KSU=y
