--- a/.github/workflows/build_oos11.yml
+++ b/.github/workflows/build_oos11.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: Grill-Laux/kernel_oneplus_sdm845
-          ref: oos/wip-upstream-staging
+          ref: oos/wip-upstream
 
       
       - name: Compile Kernel
