--- a/.github/workflows/ksu_update.yml
+++ b/.github/workflows/ksu_update.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          LOCAL_VERSION$=$(cat drivers/kernelsu/ksu_version.txt)
+          LOCAL_VERSION=$(cat drivers/kernelsu/ksu_version.txt)
           REMOTE_VERSION=`curl https://api.github.com/repos/tiann/KernelSU/releases/latest | jq -r .tag_name`
           echo "#######################"
           echo "ksu in tree version:"
