.github: AutoRelease: Update `needs`
Signed-off-by: gluwu <137363994+uwu-gl@users.noreply.github.com>

--- a/.github/workflows/AutoRelease.yml
+++ b/.github/workflows/AutoRelease.yml
@@ -26,6 +26,7 @@ jobs:
       - build-pixelos
       - build-oos
       - build-los
+      - update-ksu
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
